--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,9 @@
 <body>
 <div id="loading-bar-container"></div>
 <div>
-    <div ui-view></div>
+    <div ui-view>
+        <div></div>
+    </div>
 </div>
 <script data-main="scripts/main.js" src="scripts/require.js"></script>
 <script src="scripts/main.min.js"></script>
