--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/bootstrap/index.css">
     <link rel="stylesheet" href="styles/bootstrap/vendor.css">
     <link rel="stylesheet" href="vendor/angular-progress-button/dist/progress-button.min.css">
+    <link rel="stylesheet" href="vendor/angucomplete-alt/angucomplete-alt.css">
 </head>
 <body>
 <div id="loading-bar-container"></div>
