--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
     <title>回家么管理系统</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <link rel="icon" href="favicon1.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="favicon1.ico" type="image/x-icon"/>
     <!--<link href="styles/bootstrap/bootstrap.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="styles/animate/animate.min.css"/>
     <link rel="stylesheet" href="styles/bootstrap/index.css">
