--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="vendor/ueditor/ueditor.config.js"></script>
     <script type="text/javascript" src="vendor/ueditor/ueditor.all.js"></script>
     <script type="text/javascript" src="vendor/ueditor/lang/zh-cn/zh-cn.js"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=8wBktwVQM9GWdeP5ldMXogY48glg5sgD"></script>
+
 </head>
 <body>
 <div id="loading-bar-container"></div>
