--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>回家么管理系统</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -20,7 +21,7 @@
     <script type="text/javascript" src="vendor/ueditor/ueditor.config.js"></script>
     <script type="text/javascript" src="vendor/ueditor/ueditor.all.js"></script>
     <script type="text/javascript" src="vendor/ueditor/lang/zh-cn/zh-cn.js"></script>
-    <!--<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=8wBktwVQM9GWdeP5ldMXogY48glg5sgD"></script>-->
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=8wBktwVQM9GWdeP5ldMXogY48glg5sgD&s=1"></script>
 
 </head>
 <body>
