--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <title>回家么管理系统</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -15,20 +15,20 @@
     <link rel="stylesheet" href="styles/bootstrap/vendor.css">
     <link rel="stylesheet" href="vendor/angular-progress-button/dist/progress-button.min.css">
     <link rel="stylesheet" href="vendor/angucomplete-alt/angucomplete-alt.css">
-    <link rel="stylesheet" href="vendor/simditor/styles/simditor.css" />
+    <link rel="stylesheet" href="vendor/simditor/styles/simditor.css"/>
     <!--<link rel="stylesheet" href="vendor/ueditor/themes/default/css/ueditor.css">-->
     <script type="text/javascript" src="vendor/zeroclipboard/dist/ZeroClipboard.js"></script>
     <!--由于百度的edtior 不能使用require 无痛加载 所以使用阻塞加载方式 -->
     <script type="text/javascript" src="vendor/ueditor/ueditor.config.js"></script>
     <script type="text/javascript" src="vendor/ueditor/ueditor.all.js"></script>
     <script type="text/javascript" src="vendor/ueditor/lang/zh-cn/zh-cn.js"></script>
-    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=8wBktwVQM9GWdeP5ldMXogY48glg5sgD&s=1"></script>
+    <script type="text/javascript"
+            src="https://api.map.baidu.com/api?v=2.0&ak=8wBktwVQM9GWdeP5ldMXogY48glg5sgD&s=1"></script>
 
 </head>
 <body>
 <div id="loading-bar-container"></div>
-<div>
-    <div ui-view></div>
+<div ui-view></div>
 </div>
 <script data-main="scripts/main.js" src="scripts/require.js"></script>
 <script src="scripts/main.min.js"></script>
