--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,15 @@
 <div id="loading-bar-container"></div>
 <div ui-view></div>
 </div>
-<script data-main="scripts/main.js" src="scripts/require.js"></script>
+<script src="scripts/require.js" data-main="scripts/main.js"></script>
 <script src="scripts/main.min.js"></script>
 <script>
     require(['./bootstrap']);
 </script>
+
+<!--loading gif http-->
+<div class="mod_http_msg ng-cloak" ng-show="http_notification">
+    <span ng-bind="http_notification">加载中...</span>
+</div>
 </body>
 </html>
