已售份数基数

--- a/app/scripts/新潮十万漫游.html
+++ b/app/scripts/新潮十万漫游.html
@@ -233,6 +233,84 @@
         </section>
     </section>
     <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+            <section class="" style="max-width: 100%; box-sizing: border-box; font-size: 14px; text-align: justify; word-wrap: break-word !important;">
+                <article id="m626" class="yead_editor yead-selected" data-author="Wxeditor" style="font-size:14px;border:0px;padding:0px;margin:5px auto;white-space: normal;">
+                    <section style="margin:10px auto 30px;padding:0;max-width:100%;font-size:16px;line-height:25px;white-space:normal;background-color:#fff;text-align:center;box-sizing:border-box!important;word-wrap:break-word!important">
+                        <section class="yead_bdlc yead_bdrc" style="margin:0;padding:0;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;border-top-width:20px;border-top-style:solid;border-color:transparent #000001;border-bottom-width:0;border-bottom-style:solid;border-right-width:15px;border-right-style:solid;display:inline-block;height:15px;vertical-align:top"></section>
+                        <section class="yead_bdc" style="margin:0;padding:5px 10px;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;display:inline-block;height:35px;color:#fff;border:1px solid #212122;background-color:#fefefe">
+                            <strong><span style="margin:0;padding:0;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;color:#000">赞助商</span></strong>
+                        </section>
+                        <section class="yead_bdlc yead_bdrc" style="margin:0;padding:0;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;border-top-width:20px;border-top-style:solid;border-color:transparent #000001;border-bottom-width:0;border-bottom-style:solid;border-left-width:15px;border-left-style:solid;display:inline-block;height:15px;vertical-align:top"></section>
+                        <section class="yead_bdtc" style="margin:-16px 0 0;padding:0;max-width:100%;box-sizing:border-box!important;word-wrap:break-word!important;height:1px;border-top-width:1px;border-top-style:solid;border-top-color:#212122"></section>
+                    </section>
+                </article>
+                <p style="min-height: 1em;">
+                    麦萌联合品格周刊及育儿周刊，倾情赞助“十万少年漫游世界十大博物馆”活动，为十万孩子打造奇妙之旅！
+                </p>
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
+                    <br/>
+                </p>
+            </section>
+        </section>
+    </section>
+    <section style="background-color: rgb(255, 255, 255);">
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="text-align: center; margin-top: 10px; margin-bottom: 10px; position: static;">
+                <img style="vertical-align: middle;" class="" src="http://img.xiumi.us/xmi/ua/DqSu/i/f67b9b93640098864e3de2cc8caa7f50-sz_180883.jpg?x-oss-process=style/xm" data-ratio="1.3296875" data-w="640"/>
+            </section>
+        </section>
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="position: static;">
+                <section class="">
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        蓝剑饮品集团，0添加剂饮品的开创者，专注健康30年。
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        蓝剑.麦萌0添加剂儿童饮品&nbsp;<span style="letter-spacing: 0px; line-height: 1.6;">全球首款0添加剂儿童饮品。（发现添加任何添加剂每瓶奖励10000元）</span>
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        精选多种坚果和麦胚搭配新西兰奶粉，补充动物蛋白和植物蛋白双重蛋白，富含多种维生素与矿物质。
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        选用欧盟标准婴儿奶瓶材料制作瓶身，耐高温蒸煮，最大程度保证品质保护宝宝健康。
+                    </p>
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                </section>
+            </section>
+        </section>
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="text-align: center; margin-top: 10px; margin-bottom: 10px; position: static;">
+                <img style="vertical-align: middle;" class="" src="http://img.xiumi.us/xmi/ua/DqSu/i/1ae97996279e395e091daae6b6abf80c-sz_35024.jpg?x-oss-process=style/xm" data-ratio="0.5546875" data-w="640"/>
+            </section>
+        </section>
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="text-align: center; margin-top: 10px; margin-bottom: 10px; position: static;">
+                <img style="vertical-align: middle;" class="" src="http://img.xiumi.us/xmi/ua/DqSu/i/41b881dbab618432991468a760bb4bc4-sz_32709.jpg?x-oss-process=style/xm" data-ratio="0.4295775" data-w="568"/>
+            </section>
+        </section>
+        <section class="Powered-by-XIUMI V5" style="position: static;" powered-by="xiumi.us">
+            <section class="" style="position: static;">
+                <section class="">
+                    <p style="margin-top: 0px; margin-bottom: 0px; padding: 0px;">
+                        <br/>
+                    </p>
+                </section>
+            </section>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
         <section class="" style="margin-top: 0.5em; margin-bottom: 0.5em; max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
             <section class="" style="margin-right: 1em; margin-left: 1em; max-width: 100%; box-sizing: border-box; height: 0px; border-top-width: 1.5em; border-top-style: solid; border-top-color: rgb(160, 160, 160); border-bottom-width: 1.5em; border-bottom-style: solid; border-bottom-color: rgb(160, 160, 160); word-wrap: break-word !important; border-left-width: 1.5em !important; border-left-style: solid !important; border-left-color: transparent !important; border-right-width: 1.5em !important; border-right-style: solid !important; border-right-color: transparent !important;"></section>
             <section class="" style="margin: -2.75em 1.65em -2.3em; max-width: 100%; box-sizing: border-box; height: 0px; border-width: 1.3em; border-style: solid; border-color: rgb(255, 255, 255) transparent; word-wrap: break-word !important;"></section>
