更新拼团列表的剩余时间

--- a/app/scripts/十万少年漫游十大博物馆.html
+++ b/app/scripts/十万少年漫游十大博物馆.html
@@ -811,26 +811,26 @@
                     <br/>
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: center; word-wrap: break-word !important;">
-                    <strong style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">阿姆斯特丹国立博物馆</strong><br style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;"/>
+                    <strong style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">东京国立近代美术馆</strong><br style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;"/>
                 </p>
             </section>
         </section>
     </section>
     <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
         <section class="" style="margin-top: 10px; margin-bottom: 10px; max-width: 100%; box-sizing: border-box; text-align: center; word-wrap: break-word !important;">
-            <img class="" data-ratio="0.7828125" src="http://resource.huijiame.com/5948ceae888af5IA9JqNBI8.jpeg" data-type="png" data-w="640" style="box-sizing: border-box; vertical-align: middle; word-wrap: break-word !important; width: auto !important; visibility: visible !important;"/>
+            <img class="" data-ratio="0.7828125" src="http://resource.huijiame.com/595371873782dffztuiwpIQ.jpeg" data-type="png" data-w="640" style="box-sizing: border-box; vertical-align: middle; word-wrap: break-word !important; width: auto !important; visibility: visible !important;"/>
         </section>
     </section>
     <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
         <section class="" style="margin-top: 10px; margin-bottom: 10px; max-width: 100%; box-sizing: border-box; text-align: center; word-wrap: break-word !important;">
-            <img class="" data-ratio="0.6666666666666666" src="http://resource.huijiame.com/5948ceae87ef4yTddN2iPZx.jpeg" data-type="jpeg" data-w="600" style="box-sizing: border-box; vertical-align: middle; word-wrap: break-word !important; width: auto !important; visibility: visible !important;"/>
+            <img class="" data-ratio="0.6666666666666666" src="http://resource.huijiame.com/5953718739668LXb4PTrHTB.jpeg" data-type="jpeg" data-w="600" style="box-sizing: border-box; vertical-align: middle; word-wrap: break-word !important; width: auto !important; visibility: visible !important;"/>
         </section>
     </section>
     <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
         <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
             <section class="" style="max-width: 100%; box-sizing: border-box; font-size: 14px; word-wrap: break-word !important;">
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
-                    阿姆斯特丹国立博物馆,荷兰最大的博物馆，宫殿式建筑气势恢宏，藏有大量世界知名的艺术珍品。该馆最引人注目的收藏莫过于17世纪“黄金时代”的荷兰绘画，其中包括伦勃朗、韦梅尔、弗朗斯 哈尔斯以及扬斯滕等人的艺术杰作。而博物馆中最负盛名的无疑是伦勃朗的巨幅油画作品《夜巡》。
+                    东京国立近代美术馆, 以介绍东西方现代美术为宗旨，收集、保管和展示日本现代美术史上的代表作品，举办外国现代美术展览。该馆共收藏1907年以来的日本绘画、雕塑、工艺美术作品约5300件，其中有横山大观的《生的流转》、岸田刘生的《丽子五岁像》、梅原龙三郎的《北京之秋》荻原守卫的《女人》等
                 </p>
             </section>
         </section>
